--- a/index.html
+++ b/index.html
@@ -5,126 +5,194 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
   <style>
-    /* ===== Global Styles ===== */
+    /* --- Global Styles --- */
     body {
-      font-family: 'Poppins', Arial, sans-serif;
+      font-family: 'Segoe UI', Arial, sans-serif;
       margin: 0;
-      background: linear-gradient(135deg, #141e30, #243b55);
-      color: #f4f4f4;
-      line-height: 1.6;
+      padding: 0;
+      background: #f4f4f4;
+      color: #333;
     }
 
-    h1 {
+    header {
+      background: linear-gradient(135deg, #007bff, #0056b3);
+      color: white;
       text-align: center;
-      font-size: 2.5em;
-      margin-top: 40px;
-      letter-spacing: 2px;
-      color: #fff;
+      padding: 40px 20px;
     }
 
-    p {
-      text-align: center;
-      color: #ccc;
+    header h1 {
+      margin: 0;
+      font-size: 2.2em;
+      letter-spacing: 1px;
     }
 
+    header p {
+      margin-top: 8px;
+      font-size: 1em;
+      opacity: 0.9;
+    }
+
+    /* --- Layout --- */
     .container {
-      width: 90%;
-      max-width: 900px;
-      margin: 40px auto;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 30px 10px;
+      gap: 20px;
     }
 
-    /* ===== Project Card Styles ===== */
+    .section-title {
+      width: 100%;
+      text-align: center;
+      font-size: 1.4em;
+      font-weight: bold;
+      margin: 20px 0 10px;
+      color: #333;
+      text-transform: uppercase;
+    }
+
+    /* --- Card Styles --- */
     .project {
-      background: rgba(255, 255, 255, 0.05);
+      background: white;
       padding: 20px;
-      margin: 20px 0;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      transition: all 0.3s ease;
-      backdrop-filter: blur(10px);
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 300px;
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .project:hover {
       transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
-      background: rgba(255, 255, 255, 0.1);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
     }
 
     .project h3 {
       margin-bottom: 10px;
-      color: #00bcd4;
-      font-size: 1.3em;
+      font-size: 1.1em;
+      color: #007bff;
     }
 
-    .project p {
-      margin: 0;
-      text-align: left;
-    }
-
-    a {
-      color: #00bcd4;
+    .project a {
+      color: #007bff;
       text-decoration: none;
-      font-weight: 500;
+      font-weight: bold;
+      display: inline-block;
+      margin-top: 8px;
+      transition: color 0.3s ease;
     }
 
-    a:hover {
+    .project a:hover {
+      color: #0056b3;
       text-decoration: underline;
     }
 
-    footer {
+    /* --- Highlighted Section (Google Drive) --- */
+    .drive-section {
+      background: linear-gradient(135deg, #ff7e5f, #feb47b);
+      color: white;
+      padding: 25px;
+      border-radius: 12px;
       text-align: center;
-      margin: 50px 0 20px;
-      font-size: 0.9em;
-      color: #999;
+      margin: 30px auto;
+      width: 90%;
+      max-width: 500px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
 
-    /* ===== Responsive Design ===== */
+    .drive-section h2 {
+      margin: 0 0 10px;
+      font-size: 1.4em;
+    }
+
+    .drive-section p {
+      margin: 0;
+    }
+
+    .drive-section a {
+      color: white;
+      background: rgba(255, 255, 255, 0.2);
+      padding: 10px 20px;
+      border-radius: 8px;
+      display: inline-block;
+      margin-top: 10px;
+      transition: background 0.3s ease;
+    }
+
+    .drive-section a:hover {
+      background: rgba(255, 255, 255, 0.4);
+    }
+
+    /* --- Responsive --- */
     @media (max-width: 600px) {
-      h1 { font-size: 2em; }
-      .project { padding: 15px; }
+      header h1 { font-size: 1.8em; }
+      .project { width: 90%; }
+      .drive-section { width: 95%; }
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>MY PORTFOLIO</h1>
+    <p>Created by <b>Your Name</b></p>
+  </header>
 
-  <h1>My Portfolio</h1>
-  <p>Created by <strong>ABDULLAH CH</strong></p>
+  <!-- Google Drive / Media Section -->
+  <div class="drive-section">
+    <h2>Designs, Photos & Videos</h2>
+    <p>View my creative collection:</p>
+    <a href="https://drive.google.com/drive/folders/1JeHOoXHlQUOfeBhwnxhSdlw8_lnjy0kl" target="_blank">Open Google Drive</a>
+  </div>
 
+  <!-- Website Projects -->
   <div class="container">
+    <div class="section-title">Websites</div>
+
     <div class="project">
       <h3>Website 1</h3>
-      <p><a href="https://isprojets.com/" target="_blank">Visit site</a></p>
+      <a href="https://flexinnovative.net/" target="_blank">Visit site</a>
     </div>
 
     <div class="project">
       <h3>Website 2</h3>
-      <p><a href="https://innoteksolutions.org/" target="_blank">Visit site</a></p>
+      <a href="https://azurifyenterprise.com/" target="_blank">Visit site</a>
     </div>
 
     <div class="project">
       <h3>Website 3</h3>
-      <p><a href="https://sacollectables.co.za/" target="_blank">Visit site</a></p>
+      <a href="https://sjesolution.com/" target="_blank">Visit site</a>
     </div>
 
     <div class="project">
       <h3>Website 4</h3>
-      <p><a href="https://vumaexpots.com/" target="_blank">Visit site</a></p>
+      <a href="https://spectratrading.org/" target="_blank">Visit site</a>
     </div>
 
     <div class="project">
       <h3>Website 5</h3>
-      <p><a href="https://nexifyenterprise.com/" target="_blank">Visit site</a></p>
+      <a href="https://isprojets.com/" target="_blank">Visit site</a>
     </div>
 
     <div class="project">
-      <h3>Google Drive Portfolio</h3>
-      <p><a href="https://drive.google.com/drive/folders/1JeHOoXHlQUOfeBhwnxhSdlw8_lnjy0kl" target="_blank">Open link</a></p>
+      <h3>Website 6</h3>
+      <a href="https://innoteksolutions.org/" target="_blank">Visit site</a>
+    </div>
+
+    <div class="project">
+      <h3>Website 7</h3>
+      <a href="https://sacollectables.co.za/" target="_blank">Visit site</a>
+    </div>
+
+    <div class="project">
+      <h3>Website 8</h3>
+      <a href="https://vumaexpots.com/" target="_blank">Visit site</a>
+    </div>
+
+    <div class="project">
+      <h3>Website 9</h3>
+      <a href="https://nexifyenterprise.com/" target="_blank">Visit site</a>
     </div>
   </div>
-
-  <footer>
-    &copy; 2025 Abzyyy. All Rights Reserved.
-  </footer>
-
 </body>
 </html>
