--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
       font-family: 'Segoe UI', Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
-      color: #333;
+      background-color: #000;
+      color: #fff;
     }
 
     header {
-      background: linear-gradient(135deg, #007bff, #0056b3);
+      background: linear-gradient(135deg, #00c6ff, #0072ff);
       color: white;
       text-align: center;
       padding: 40px 20px;
+      border-bottom: 3px solid #00c6ff;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2.2em;
+      font-size: 2.3em;
       letter-spacing: 1px;
     }
 
@@ -33,100 +34,121 @@
       opacity: 0.9;
     }
 
-    /* --- Layout --- */
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 30px 10px;
-      gap: 20px;
-    }
-
+    /* --- Section Titles --- */
     .section-title {
       width: 100%;
       text-align: center;
       font-size: 1.4em;
       font-weight: bold;
-      margin: 20px 0 10px;
-      color: #333;
+      margin: 30px 0 15px;
+      color: #00c6ff;
       text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    /* --- Container --- */
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 25px;
+      padding: 20px;
     }
 
     /* --- Card Styles --- */
     .project {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      width: 300px;
+      background: linear-gradient(135deg, #222, #111);
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
+      width: 280px;
       text-align: center;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      position: relative;
+      overflow: hidden;
     }
 
+    /* Unique card colors */
+    .project:nth-child(1) { border-top: 4px solid #00c6ff; }
+    .project:nth-child(2) { border-top: 4px solid #ff6b6b; }
+    .project:nth-child(3) { border-top: 4px solid #feca57; }
+    .project:nth-child(4) { border-top: 4px solid #48dbfb; }
+    .project:nth-child(5) { border-top: 4px solid #1dd1a1; }
+    .project:nth-child(6) { border-top: 4px solid #5f27cd; }
+    .project:nth-child(7) { border-top: 4px solid #ff9f43; }
+    .project:nth-child(8) { border-top: 4px solid #54a0ff; }
+    .project:nth-child(9) { border-top: 4px solid #ee5253; }
+
+    /* Hover Effects */
     .project:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+      transform: translateY(-10px);
+      box-shadow: 0 0 25px rgba(0, 255, 255, 0.5);
     }
 
     .project h3 {
       margin-bottom: 10px;
+      color: #fff;
       font-size: 1.1em;
-      color: #007bff;
     }
 
     .project a {
-      color: #007bff;
+      color: #00c6ff;
       text-decoration: none;
       font-weight: bold;
       display: inline-block;
-      margin-top: 8px;
-      transition: color 0.3s ease;
+      margin-top: 10px;
+      border: 1px solid #00c6ff;
+      padding: 8px 15px;
+      border-radius: 8px;
+      transition: background 0.3s ease, color 0.3s ease;
     }
 
     .project a:hover {
-      color: #0056b3;
-      text-decoration: underline;
+      background: #00c6ff;
+      color: #000;
     }
 
-    /* --- Highlighted Section (Google Drive) --- */
+    /* --- Highlighted Drive Section --- */
     .drive-section {
       background: linear-gradient(135deg, #ff7e5f, #feb47b);
-      color: white;
-      padding: 25px;
-      border-radius: 12px;
+      color: #fff;
+      padding: 30px;
+      border-radius: 15px;
       text-align: center;
-      margin: 30px auto;
+      margin: 40px auto 20px;
       width: 90%;
-      max-width: 500px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      max-width: 600px;
+      box-shadow: 0 0 25px rgba(255, 166, 77, 0.4);
     }
 
     .drive-section h2 {
-      margin: 0 0 10px;
+      margin-bottom: 8px;
       font-size: 1.4em;
     }
 
     .drive-section p {
       margin: 0;
+      font-size: 1em;
     }
 
     .drive-section a {
-      color: white;
-      background: rgba(255, 255, 255, 0.2);
+      color: #fff;
+      background: rgba(255, 255, 255, 0.15);
       padding: 10px 20px;
-      border-radius: 8px;
+      border-radius: 10px;
       display: inline-block;
       margin-top: 10px;
+      font-weight: bold;
       transition: background 0.3s ease;
     }
 
     .drive-section a:hover {
-      background: rgba(255, 255, 255, 0.4);
+      background: rgba(255, 255, 255, 0.3);
     }
 
     /* --- Responsive --- */
     @media (max-width: 600px) {
-      header h1 { font-size: 1.8em; }
+      header h1 { font-size: 1.9em; }
       .project { width: 90%; }
       .drive-section { width: 95%; }
     }
@@ -138,17 +160,16 @@
     <p>Created by <b>Your Name</b></p>
   </header>
 
-  <!-- Google Drive / Media Section -->
+  <!-- Drive Section -->
   <div class="drive-section">
     <h2>Designs, Photos & Videos</h2>
-    <p>View my creative collection:</p>
+    <p>Explore my creative collection below:</p>
     <a href="https://drive.google.com/drive/folders/1JeHOoXHlQUOfeBhwnxhSdlw8_lnjy0kl" target="_blank">Open Google Drive</a>
   </div>
 
-  <!-- Website Projects -->
+  <!-- Websites -->
+  <div class="section-title">Websites</div>
   <div class="container">
-    <div class="section-title">Websites</div>
-
     <div class="project">
       <h3>Website 1</h3>
       <a href="https://flexinnovative.net/" target="_blank">Visit site</a>
