--- a/index.html
+++ b/index.html
@@ -4,46 +4,86 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700;800&display=swap" rel="stylesheet">
+
   <style>
     /* --- Global Styles --- */
     body {
-      font-family: 'Segoe UI', Arial, sans-serif;
+      font-family: 'Poppins', Arial, sans-serif;
       margin: 0;
       padding: 0;
       background-color: #000;
       color: #fff;
+      overflow-x: hidden;
     }
 
     header {
       background: linear-gradient(135deg, #00c6ff, #0072ff);
       color: white;
       text-align: center;
-      padding: 40px 20px;
+      padding: 60px 20px;
       border-bottom: 3px solid #00c6ff;
+      box-shadow: 0 0 25px rgba(0, 114, 255, 0.4);
+      animation: fadeIn 1.5s ease-out;
+    }
+
+    .logo-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .logo-icon {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background: radial-gradient(circle at 30% 30%, #00eaff, #0072ff);
+      box-shadow: 0 0 25px rgba(0, 255, 255, 0.7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Orbitron', sans-serif;
+      font-weight: 800;
+      font-size: 1.2em;
+      color: #000;
+      animation: rotateGlow 4s linear infinite;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2.3em;
-      letter-spacing: 1px;
+      font-family: 'Orbitron', sans-serif;
+      font-weight: 800;
+      font-size: 3em;
+      letter-spacing: 3px;
+      text-transform: uppercase;
+      color: #fff;
+      text-shadow: 0 0 15px rgba(0, 255, 255, 0.8),
+                   0 0 25px rgba(0, 200, 255, 0.6);
+      animation: glowPulse 2s infinite alternate;
     }
 
     header p {
-      margin-top: 8px;
-      font-size: 1em;
+      margin-top: 10px;
+      font-size: 1.1em;
       opacity: 0.9;
+      letter-spacing: 1px;
+      font-weight: 400;
+      animation: fadeIn 2s ease-in;
     }
 
     /* --- Section Titles --- */
     .section-title {
       width: 100%;
       text-align: center;
-      font-size: 1.4em;
-      font-weight: bold;
-      margin: 30px 0 15px;
+      font-size: 1.6em;
+      font-weight: 700;
+      margin: 40px 0 15px;
       color: #00c6ff;
       text-transform: uppercase;
-      letter-spacing: 1px;
+      letter-spacing: 2px;
+      animation: fadeIn 2s ease;
     }
 
     /* --- Container --- */
@@ -51,104 +91,157 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 25px;
+      gap: 30px;
       padding: 20px;
+      animation: fadeInUp 1.5s ease-out;
     }
 
     /* --- Card Styles --- */
     .project {
-      background: linear-gradient(135deg, #222, #111);
+      background: linear-gradient(135deg, #1a1a1a, #0f0f0f);
       padding: 25px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
+      border-radius: 18px;
       width: 280px;
       text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
       position: relative;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
       overflow: hidden;
+      border: 2px solid transparent;
     }
 
-    /* Unique card colors */
-    .project:nth-child(1) { border-top: 4px solid #00c6ff; }
-    .project:nth-child(2) { border-top: 4px solid #ff6b6b; }
-    .project:nth-child(3) { border-top: 4px solid #feca57; }
-    .project:nth-child(4) { border-top: 4px solid #48dbfb; }
-    .project:nth-child(5) { border-top: 4px solid #1dd1a1; }
-    .project:nth-child(6) { border-top: 4px solid #5f27cd; }
-    .project:nth-child(7) { border-top: 4px solid #ff9f43; }
-    .project:nth-child(8) { border-top: 4px solid #54a0ff; }
-    .project:nth-child(9) { border-top: 4px solid #ee5253; }
+    .project::before {
+      content: "";
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: conic-gradient(
+        from 0deg,
+        #00c6ff,
+        #ff6b6b,
+        #feca57,
+        #48dbfb,
+        #1dd1a1,
+        #5f27cd,
+        #ff9f43,
+        #00c6ff
+      );
+      z-index: 0;
+      transition: transform 0.6s ease;
+      opacity: 0;
+    }
 
-    /* Hover Effects */
+    .project:hover::before {
+      opacity: 1;
+      transform: rotate(180deg);
+      animation: spin 3s linear infinite;
+    }
+
     .project:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 0 25px rgba(0, 255, 255, 0.5);
+      transform: translateY(-12px) rotateY(5deg);
+      box-shadow: 0 0 35px rgba(0, 255, 255, 0.4);
+      border: 2px solid #00c6ff;
     }
 
     .project h3 {
-      margin-bottom: 10px;
+      position: relative;
+      z-index: 1;
       color: #fff;
-      font-size: 1.1em;
+      margin-bottom: 12px;
+      font-size: 1.2em;
+      font-weight: 600;
     }
 
     .project a {
+      position: relative;
+      z-index: 1;
       color: #00c6ff;
       text-decoration: none;
       font-weight: bold;
+      border: 1px solid #00c6ff;
+      padding: 10px 18px;
+      border-radius: 10px;
       display: inline-block;
       margin-top: 10px;
-      border: 1px solid #00c6ff;
-      padding: 8px 15px;
-      border-radius: 8px;
-      transition: background 0.3s ease, color 0.3s ease;
+      transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
     }
 
     .project a:hover {
       background: #00c6ff;
       color: #000;
+      transform: scale(1.1);
+      box-shadow: 0 0 15px #00c6ff;
     }
 
-    /* --- Highlighted Drive Section --- */
+    /* --- Drive Section --- */
     .drive-section {
       background: linear-gradient(135deg, #ff7e5f, #feb47b);
       color: #fff;
-      padding: 30px;
-      border-radius: 15px;
+      padding: 40px;
+      border-radius: 18px;
       text-align: center;
-      margin: 40px auto 20px;
+      margin: 50px auto 30px;
       width: 90%;
       max-width: 600px;
-      box-shadow: 0 0 25px rgba(255, 166, 77, 0.4);
+      box-shadow: 0 0 30px rgba(255, 166, 77, 0.5);
+      animation: fadeInUp 1.2s ease-out;
     }
 
     .drive-section h2 {
-      margin-bottom: 8px;
-      font-size: 1.4em;
-    }
-
-    .drive-section p {
-      margin: 0;
-      font-size: 1em;
+      margin-bottom: 10px;
+      font-size: 1.5em;
+      font-weight: 700;
     }
 
     .drive-section a {
       color: #fff;
       background: rgba(255, 255, 255, 0.15);
-      padding: 10px 20px;
+      padding: 12px 25px;
       border-radius: 10px;
       display: inline-block;
       margin-top: 10px;
       font-weight: bold;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, transform 0.3s ease;
     }
 
     .drive-section a:hover {
       background: rgba(255, 255, 255, 0.3);
+      transform: scale(1.1);
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+    }
+
+    /* --- Animations --- */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    @keyframes rotateGlow {
+      0% { transform: rotate(0deg); box-shadow: 0 0 20px #00c6ff; }
+      50% { transform: rotate(180deg); box-shadow: 0 0 35px #00eaff; }
+      100% { transform: rotate(360deg); box-shadow: 0 0 20px #00c6ff; }
+    }
+
+    @keyframes glowPulse {
+      0% { text-shadow: 0 0 15px #00c6ff, 0 0 30px #0072ff; }
+      100% { text-shadow: 0 0 25px #00eaff, 0 0 45px #0099ff; }
     }
 
     /* --- Responsive --- */
     @media (max-width: 600px) {
-      header h1 { font-size: 1.9em; }
+      header h1 { font-size: 2.3em; }
       .project { width: 90%; }
       .drive-section { width: 95%; }
     }
@@ -156,7 +249,10 @@
 </head>
 <body>
   <header>
-    <h1>MY PORTFOLIO</h1>
+    <div class="logo-container">
+      <div class="logo-icon">A</div> <!-- You can change 'A' to any initial or logo text -->
+      <h1>MY PORTFOLIO</h1>
+    </div>
     <p>Created by <b>Your Name</b></p>
   </header>
 
