--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Abzy Portfolio</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700;800&display=swap" rel="stylesheet">
 
@@ -36,9 +36,9 @@
     }
 
     .logo-icon {
-      width: 50px;
+      width: 70px;
       height: 50px;
-      border-radius: 50%;
+      border-radius: 12px;
       background: radial-gradient(circle at 30% 30%, #00eaff, #0072ff);
       box-shadow: 0 0 25px rgba(0, 255, 255, 0.7);
       display: flex;
@@ -46,7 +46,7 @@
       align-items: center;
       font-family: 'Orbitron', sans-serif;
       font-weight: 800;
-      font-size: 1.2em;
+      font-size: 1.4em;
       color: #000;
       animation: rotateGlow 4s linear infinite;
     }
@@ -86,28 +86,27 @@
       animation: fadeIn 2s ease;
     }
 
-    /* --- Container --- */
+    /* --- Container with grid --- */
     .container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
       padding: 20px;
-      animation: fadeInUp 1.5s ease-out;
+      border-top: 1px solid #333;
+      border-left: 1px solid #333;
     }
 
-    /* --- Card Styles --- */
     .project {
       background: linear-gradient(135deg, #1a1a1a, #0f0f0f);
       padding: 25px;
       border-radius: 18px;
-      width: 280px;
       text-align: center;
       position: relative;
       transition: transform 0.4s ease, box-shadow 0.4s ease;
       box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
       overflow: hidden;
-      border: 2px solid transparent;
+      border-top: 1px solid #333;
+      border-left: 1px solid #333;
     }
 
     .project::before {
@@ -140,7 +139,7 @@
     }
 
     .project:hover {
-      transform: translateY(-12px) rotateY(5deg);
+      transform: translateY(-10px) rotateY(5deg);
       box-shadow: 0 0 35px rgba(0, 255, 255, 0.4);
       border: 2px solid #00c6ff;
     }
@@ -171,7 +170,7 @@
     .project a:hover {
       background: #00c6ff;
       color: #000;
-      transform: scale(1.1);
+      transform: scale(1.05);
       box-shadow: 0 0 15px #00c6ff;
     }
 
@@ -186,7 +185,6 @@
       width: 90%;
       max-width: 600px;
       box-shadow: 0 0 30px rgba(255, 166, 77, 0.5);
-      animation: fadeInUp 1.2s ease-out;
     }
 
     .drive-section h2 {
@@ -208,52 +206,33 @@
 
     .drive-section a:hover {
       background: rgba(255, 255, 255, 0.3);
-      transform: scale(1.1);
+      transform: scale(1.05);
       box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
     }
 
     /* --- Animations --- */
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    @keyframes rotateGlow {
-      0% { transform: rotate(0deg); box-shadow: 0 0 20px #00c6ff; }
-      50% { transform: rotate(180deg); box-shadow: 0 0 35px #00eaff; }
-      100% { transform: rotate(360deg); box-shadow: 0 0 20px #00c6ff; }
-    }
-
-    @keyframes glowPulse {
-      0% { text-shadow: 0 0 15px #00c6ff, 0 0 30px #0072ff; }
-      100% { text-shadow: 0 0 25px #00eaff, 0 0 45px #0099ff; }
-    }
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    @keyframes rotateGlow { 0% { transform: rotate(0deg); box-shadow: 0 0 20px #00c6ff; } 50% { transform: rotate(180deg); box-shadow: 0 0 35px #00eaff; } 100% { transform: rotate(360deg); box-shadow: 0 0 20px #00c6ff; } }
+    @keyframes glowPulse { 0% { text-shadow: 0 0 15px #00c6ff, 0 0 30px #0072ff; } 100% { text-shadow: 0 0 25px #00eaff, 0 0 45px #0099ff; } }
 
     /* --- Responsive --- */
     @media (max-width: 600px) {
       header h1 { font-size: 2.3em; }
-      .project { width: 90%; }
-      .drive-section { width: 95%; }
+      .logo-icon { width: 60px; height: 45px; font-size: 1.2em; }
+      .project { width: 100%; }
+      .container { grid-template-columns: 1fr; padding: 10px; }
+      .drive-section { width: 95%; padding: 30px; }
     }
   </style>
 </head>
 <body>
   <header>
     <div class="logo-container">
-      <div class="logo-icon">A</div> <!-- You can change 'A' to any initial or logo text -->
+      <div class="logo-icon">Abzy</div>
       <h1>MY PORTFOLIO</h1>
     </div>
-    <p>Created by <b>Your Name</b></p>
+    <p>Created by <b>Abzyyy</b></p>
   </header>
 
   <!-- Drive Section -->
@@ -270,17 +249,14 @@
       <h3>Website 1</h3>
       <a href="https://flexinnovative.net/" target="_blank">Visit site</a>
     </div>
-
     <div class="project">
       <h3>Website 2</h3>
       <a href="https://azurifyenterprise.com/" target="_blank">Visit site</a>
     </div>
-
     <div class="project">
       <h3>Website 3</h3>
       <a href="https://sjesolution.com/" target="_blank">Visit site</a>
     </div>
-
     <div class="project">
       <h3>Website 4</h3>
       <a href="https://spectratrading.org/" target="_blank">Visit site</a>
