--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700;800&display=swap" rel="stylesheet">
 
   <style>
-    /* --- Global Styles --- */
     body {
       font-family: 'Poppins', Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #000;
-      color: #fff;
+      background-color: #1e1e1e; /* Dark grey */
+      color: #e0e0e0;
       overflow-x: hidden;
     }
 
     header {
-      background: linear-gradient(135deg, #00c6ff, #0072ff);
+      background: linear-gradient(135deg, #32ff7e, #1e1e1e);
       color: white;
       text-align: center;
       padding: 60px 20px;
-      border-bottom: 3px solid #00c6ff;
-      box-shadow: 0 0 25px rgba(0, 114, 255, 0.4);
-      animation: fadeIn 1.5s ease-out;
+      border-bottom: 3px solid #32ff7e;
+      box-shadow: 0 0 25px rgba(50, 255, 126, 0.5);
     }
 
     .logo-container {
@@ -39,15 +37,15 @@
       width: 70px;
       height: 50px;
       border-radius: 12px;
-      background: radial-gradient(circle at 30% 30%, #00eaff, #0072ff);
-      box-shadow: 0 0 25px rgba(0, 255, 255, 0.7);
+      background: radial-gradient(circle at 30% 30%, #32ff7e, #1e1e1e);
+      box-shadow: 0 0 20px rgba(50, 255, 126, 0.7);
       display: flex;
       justify-content: center;
       align-items: center;
       font-family: 'Orbitron', sans-serif;
       font-weight: 800;
       font-size: 1.4em;
-      color: #000;
+      color: #1e1e1e;
       animation: rotateGlow 4s linear infinite;
     }
 
@@ -58,9 +56,9 @@
       font-size: 3em;
       letter-spacing: 3px;
       text-transform: uppercase;
-      color: #fff;
-      text-shadow: 0 0 15px rgba(0, 255, 255, 0.8),
-                   0 0 25px rgba(0, 200, 255, 0.6);
+      color: #32ff7e;
+      text-shadow: 0 0 15px rgba(50, 255, 126, 0.8),
+                   0 0 25px rgba(50, 255, 126, 0.6);
       animation: glowPulse 2s infinite alternate;
     }
 
@@ -70,153 +68,119 @@
       opacity: 0.9;
       letter-spacing: 1px;
       font-weight: 400;
-      animation: fadeIn 2s ease-in;
     }
 
-    /* --- Section Titles --- */
     .section-title {
       width: 100%;
       text-align: center;
       font-size: 1.6em;
       font-weight: 700;
       margin: 40px 0 15px;
-      color: #00c6ff;
+      color: #32ff7e;
       text-transform: uppercase;
       letter-spacing: 2px;
-      animation: fadeIn 2s ease;
     }
 
-    /* --- Container with grid --- */
     .container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
       padding: 20px;
-      border-top: 1px solid #333;
-      border-left: 1px solid #333;
+      border-top: 1px solid #32ff7e;
+      border-left: 1px solid #32ff7e;
     }
 
     .project {
-      background: linear-gradient(135deg, #1a1a1a, #0f0f0f);
+      background: linear-gradient(135deg, #2b2b2b, #1e1e1e);
       padding: 25px;
       border-radius: 18px;
       text-align: center;
       position: relative;
       transition: transform 0.4s ease, box-shadow 0.4s ease;
-      box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
+      box-shadow: 0 0 15px rgba(50, 255, 126, 0.2);
       overflow: hidden;
-      border-top: 1px solid #333;
-      border-left: 1px solid #333;
-    }
-
-    .project::before {
-      content: "";
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: conic-gradient(
-        from 0deg,
-        #00c6ff,
-        #ff6b6b,
-        #feca57,
-        #48dbfb,
-        #1dd1a1,
-        #5f27cd,
-        #ff9f43,
-        #00c6ff
-      );
-      z-index: 0;
-      transition: transform 0.6s ease;
-      opacity: 0;
-    }
-
-    .project:hover::before {
-      opacity: 1;
-      transform: rotate(180deg);
-      animation: spin 3s linear infinite;
+      border-top: 1px solid #32ff7e;
+      border-left: 1px solid #32ff7e;
     }
 
     .project:hover {
       transform: translateY(-10px) rotateY(5deg);
-      box-shadow: 0 0 35px rgba(0, 255, 255, 0.4);
-      border: 2px solid #00c6ff;
+      box-shadow: 0 0 35px rgba(50, 255, 126, 0.5);
+      border: 2px solid #32ff7e;
     }
 
     .project h3 {
-      position: relative;
-      z-index: 1;
-      color: #fff;
+      color: #32ff7e;
       margin-bottom: 12px;
-      font-size: 1.2em;
       font-weight: 600;
     }
 
     .project a {
-      position: relative;
-      z-index: 1;
-      color: #00c6ff;
+      color: #32ff7e;
       text-decoration: none;
       font-weight: bold;
-      border: 1px solid #00c6ff;
+      border: 1px solid #32ff7e;
       padding: 10px 18px;
       border-radius: 10px;
       display: inline-block;
-      margin-top: 10px;
-      transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
+      transition: all 0.3s ease;
     }
 
     .project a:hover {
-      background: #00c6ff;
-      color: #000;
+      background: #32ff7e;
+      color: #1e1e1e;
       transform: scale(1.05);
-      box-shadow: 0 0 15px #00c6ff;
+      box-shadow: 0 0 15px #32ff7e;
     }
 
-    /* --- Drive Section --- */
     .drive-section {
-      background: linear-gradient(135deg, #ff7e5f, #feb47b);
-      color: #fff;
+      background: linear-gradient(135deg, #32ff7e, #1e1e1e);
+      color: #1e1e1e;
       padding: 40px;
       border-radius: 18px;
       text-align: center;
       margin: 50px auto 30px;
       width: 90%;
       max-width: 600px;
-      box-shadow: 0 0 30px rgba(255, 166, 77, 0.5);
+      box-shadow: 0 0 30px rgba(50, 255, 126, 0.5);
     }
 
     .drive-section h2 {
       margin-bottom: 10px;
       font-size: 1.5em;
       font-weight: 700;
+      color: #1e1e1e;
     }
 
     .drive-section a {
-      color: #fff;
-      background: rgba(255, 255, 255, 0.15);
+      color: #1e1e1e;
+      background: rgba(50, 255, 126, 0.2);
       padding: 12px 25px;
       border-radius: 10px;
       display: inline-block;
       margin-top: 10px;
       font-weight: bold;
-      transition: background 0.3s ease, transform 0.3s ease;
+      transition: all 0.3s ease;
     }
 
     .drive-section a:hover {
-      background: rgba(255, 255, 255, 0.3);
+      background: #32ff7e;
+      color: #1e1e1e;
       transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+      box-shadow: 0 0 15px rgba(50, 255, 126, 0.5);
     }
 
-    /* --- Animations --- */
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    @keyframes rotateGlow { 0% { transform: rotate(0deg); box-shadow: 0 0 20px #00c6ff; } 50% { transform: rotate(180deg); box-shadow: 0 0 35px #00eaff; } 100% { transform: rotate(360deg); box-shadow: 0 0 20px #00c6ff; } }
-    @keyframes glowPulse { 0% { text-shadow: 0 0 15px #00c6ff, 0 0 30px #0072ff; } 100% { text-shadow: 0 0 25px #00eaff, 0 0 45px #0099ff; } }
+    @keyframes rotateGlow {
+      0% { transform: rotate(0deg); }
+      50% { transform: rotate(180deg); }
+      100% { transform: rotate(360deg); }
+    }
 
-    /* --- Responsive --- */
+    @keyframes glowPulse {
+      0% { text-shadow: 0 0 15px #32ff7e, 0 0 30px #32ff7e; }
+      100% { text-shadow: 0 0 25px #32ff7e, 0 0 45px #32ff7e; }
+    }
+
     @media (max-width: 600px) {
       header h1 { font-size: 2.3em; }
       .logo-icon { width: 60px; height: 45px; font-size: 1.2em; }
@@ -261,27 +225,22 @@
       <h3>Website 4</h3>
       <a href="https://spectratrading.org/" target="_blank">Visit site</a>
     </div>
-
     <div class="project">
       <h3>Website 5</h3>
       <a href="https://isprojets.com/" target="_blank">Visit site</a>
     </div>
-
     <div class="project">
       <h3>Website 6</h3>
       <a href="https://innoteksolutions.org/" target="_blank">Visit site</a>
     </div>
-
     <div class="project">
       <h3>Website 7</h3>
       <a href="https://sacollectables.co.za/" target="_blank">Visit site</a>
     </div>
-
     <div class="project">
       <h3>Website 8</h3>
       <a href="https://vumaexpots.com/" target="_blank">Visit site</a>
     </div>
-
     <div class="project">
       <h3>Website 9</h3>
       <a href="https://nexifyenterprise.com/" target="_blank">Visit site</a>
