--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     position: relative;
   }
 
-  /* --- Neon Grid Background for page (not header) --- */
+  /* --- Neon Grid Background --- */
   body::before {
     content: '';
     position: fixed;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background: linear-gradient(#0f0f0f 1px, transparent 1px), 
+    background: linear-gradient(#0f0f0f 1px, transparent 1px),
                 linear-gradient(90deg, #0f0f0f 1px, transparent 1px);
     background-size: 50px 50px;
     z-index: -2;
@@ -38,7 +38,7 @@
   /* --- Header --- */
   header {
     text-align: center;
-    padding: 80px 20px 40px;
+    padding: 100px 20px 40px;
     position: relative;
     z-index: 1;
     overflow: hidden;
@@ -65,6 +65,23 @@
   @keyframes scan {
     0% { left: -100%; }
     100% { left: 100%; }
+  }
+
+  /* --- Floating Neon Particles --- */
+  .particle {
+    position: absolute;
+    width: 3px;
+    height: 3px;
+    background: #32ff7e;
+    border-radius: 50%;
+    opacity: 0.6;
+    animation: floatParticles linear infinite;
+  }
+
+  @keyframes floatParticles {
+    0% { transform: translateY(0) translateX(0); opacity: 0.5; }
+    50% { opacity: 1; }
+    100% { transform: translateY(-150px) translateX(50px); opacity: 0; }
   }
 
   .logo-container {
@@ -227,6 +244,13 @@
       <h1>MY PORTFOLIO</h1>
     </div>
     <p>Created by <b>Abzyyy</b></p>
+
+    <!-- Neon particles -->
+    <div class="particle" style="top:20%; left:10%; animation-duration:4s;"></div>
+    <div class="particle" style="top:50%; left:30%; animation-duration:5s;"></div>
+    <div class="particle" style="top:70%; left:60%; animation-duration:6s;"></div>
+    <div class="particle" style="top:30%; left:80%; animation-duration:4.5s;"></div>
+    <div class="particle" style="top:10%; left:50%; animation-duration:5.5s;"></div>
   </header>
 
   <div class="drive-section">
