Add design section with styles and Google Drive link
Added a new design section with styles and links to a Google Drive folder.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,35 @@
       box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
     }
 
+    /* --- Design Section --- */
+    .drive-section {
+      background: #ffffff;
+      color: #ff9f9f;
+      padding: 40px;
+      border-radius: 18px;
+      text-align: center;
+      margin: 50px auto 30px;
+      width: 90%;
+      max-width: 600px;
+      box-shadow: 0 0 30px rgba(255, 159, 159, 0.2);
+    }
+
+    .drive-section a {
+      color: #ffffff;
+      background: #ff9f9f;
+      padding: 12px 25px;
+      border-radius: 10px;
+      display: inline-block;
+      font-weight: bold;
+      transition: all 0.3s ease;
+      text-decoration: none;
+    }
+
+    .drive-section a:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
+    }
+
     @media (max-width: 600px) {
       header h1 { font-size: 2.3em; }
     }
@@ -85,6 +114,13 @@
     <a href="projects.html">See My Projects</a>
   </div>
 </header>
+
+<!-- Designs Section -->
+<div class="drive-section">
+  <h2>Designs, Photos & Videos</h2>
+  <p>Explore my creative collection:</p>
+  <a href="https://drive.google.com/drive/folders/1JeHOoXHlQUOfeBhwnxhSdlw8_lnjy0kl" target="_blank">Open Google Drive</a>
+</div>
 
 </body>
 </html>
